--- a/index-style.css
+++ b/index-style.css
@@ -36,13 +36,13 @@
 /*topnav bar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: white;
 }
 
 .topnav a {
   float: left;
-  display: block;
-  color: #f2f2f2;
+  display: inline-block;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -50,13 +50,13 @@
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: orange;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: darkorange;
+  color: black;
 }
 
 .topnav .icon {
