--- a/index-style.css
+++ b/index-style.css
@@ -40,7 +40,7 @@
 }
 
 .topnav a {
-  float: left;
+  float: right;
   display: inline-block;
   color: black;
   text-align: center;
@@ -64,7 +64,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:last-child) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
