--- a/index-style.css
+++ b/index-style.css
@@ -62,7 +62,7 @@
 .topnav .icon {
   display: none;
 }
-
+/*
 @media screen and (max-width: 600px) {
   .topnav a:not(:last-child) {display: none;}
   .topnav a.icon {
@@ -84,3 +84,4 @@
     text-align: left;
   }
 }
+*/
