--- a/index-style.css
+++ b/index-style.css
@@ -26,13 +26,33 @@
     padding-bottom:10px;
     padding-left:50px;
 }
+
+#choice{
+  height="260px" 
+  width="260px"
+}
 #choice:hover{
     transition: transform 2s ease,color 2s ease;
     transform:translateY(-5px);
    
     cursor: pointer;
 }
+@media screen and (max-width: 600px) {
+#choicemenu{
+    height: auto;
+    background: #DCDCDC;
+    text-align: center;
+    padding-top:5px;
+    padding-right:10px;
+    padding-bottom:10px;
+    padding-left:10px;
+}
 
+#choice{
+  height="100px" 
+  width="100px"
+}
+}
 /*topnav bar */
 .topnav {
   overflow: hidden;
