--- a/index-style.css
+++ b/index-style.css
@@ -86,31 +86,11 @@
 /*main menu*/
 .main{
 padding-left:220px;
+background-color:grey;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 992px) {
 .main{
 padding-left:16px;
 }}
-/*
-@media screen and (max-width: 600px) {
-  .topnav a:not(:last-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-*/
+
