--- a/index-style.css
+++ b/index-style.css
@@ -91,17 +91,51 @@
 }
 }
 /*main menu*/
-.body{
-  background-color:grey;
+* {
+  box-sizing: border-box;
 }
 .main{
   padding-left:220px;
-  background-color:grey;
+  
 }
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+/* Remove extra left and right margins, due to padding */
+.row {
+  margin:20px 200px 20px 200px;
+  background-color:lightgrey;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: white;
+}
+
 @media screen and (max-width: 992px) {
 .main{
   padding-left:16px;
  }
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+ .row {
+ 	margin:20px 20px 20px 20px;
+	background-color:lightgrey;
+    }
 }
 
 
