--- a/index-style.css
+++ b/index-style.css
@@ -95,8 +95,8 @@
   box-sizing: border-box;
 }
 .main{
-  padding-left:220px;
   
+  background-color:lightgrey;
 }
 /* Float four columns side by side */
 .column {
@@ -125,7 +125,7 @@
 
 @media screen and (max-width: 992px) {
 .main{
-  padding-left:16px;
+  background-color:lightgrey;
  }
   .column {
     width: 100%;
