--- a/index-style.css
+++ b/index-style.css
@@ -102,6 +102,7 @@
 .column {
   float: left;
   width: 25%;
+  margin-top:20px;
   padding: 0 10px;
 }
 /* Remove extra left and right margins, due to padding */
