--- a/index-style.css
+++ b/index-style.css
@@ -63,7 +63,7 @@
   display: inline-block;
   color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 20px 20px 20px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -81,6 +81,12 @@
 .topnav .icon {
   display: none;
 }
+
+.topnav{
+  position: -webkit-sticky; /* macbook Safari */
+  position: sticky;
+  top: 0;
+}	
 /*Sidebar*/
 .sidebar{
   width:200px; 
