--- a/index-style.css
+++ b/index-style.css
@@ -4,10 +4,11 @@
   background-color: white;
   text-align: center;
   padding: 10px 10px;
+  position:relative;
 }
 
 .sticky {
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
 }
@@ -84,7 +85,7 @@
 
 .topnav{
   position: -webkit-sticky; /* macbook Safari */
-  position: sticky;
+  position: relative;
   top: 0;
 }	
 /*Sidebar*/
