--- a/index-style.css
+++ b/index-style.css
@@ -12,7 +12,11 @@
   top: 0;
   width: 100%;
 }
-
+.sticky1 {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 /*CHOICE MENU*/
 .title-text{
     font-size: 20px;
