--- a/index-style.css
+++ b/index-style.css
@@ -132,6 +132,18 @@
   text-align: center;
   background-color: white;
 }
+.cartbutton {
+  border: none;
+  color: white;
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  background-color: #4CAF50;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 992px) {
 .main{
