--- a/index-style.css
+++ b/index-style.css
@@ -143,6 +143,7 @@
   margin: 4px 2px;
   background-color: #4CAF50;
   cursor: pointer;
+  border-radius: 12px;
 }
 
 @media screen and (max-width: 992px) {
