--- a/index-style.css
+++ b/index-style.css
@@ -134,7 +134,7 @@
 }
 .cartbutton {
   border: none;
-  color: white;
+  color: black;
   padding: 15px 15px;
   text-align: center;
   text-decoration: none;
@@ -146,7 +146,7 @@
   border-radius: 12px;
 }
 .cartbutton: hover{
-  background-color: orange;
+  background-color: white;
 }
 @media screen and (max-width: 992px) {
 .main{
