--- a/index-style.css
+++ b/index-style.css
@@ -132,7 +132,7 @@
   text-align: center;
   background-color: white;
 }
-.cartbutton {
+.cartbutton a{
   border: none;
   color: black;
   padding: 15px 15px;
@@ -145,7 +145,7 @@
   cursor: pointer;
   border-radius: 12px;
 }
-.cartbutton: hover{
+.cartbutton a:hover{
   background-color: white;
 }
 @media screen and (max-width: 992px) {
