--- a/index-style.css
+++ b/index-style.css
@@ -132,7 +132,7 @@
   text-align: center;
   background-color: white;
 }
-.cartbutton a{
+.cartbutton {
   border: none;
   color: black;
   padding: 15px 15px;
@@ -145,8 +145,9 @@
   cursor: pointer;
   border-radius: 12px;
 }
-.cartbutton a:hover{
+.cartbutton:hover{
   background-color: white;
+	cursor: pointer;
 }
 @media screen and (max-width: 992px) {
 .main{
