--- a/index-style.css
+++ b/index-style.css
@@ -146,7 +146,7 @@
   border-radius: 12px;
 }
 .cartbutton:hover{
-  background-color: white;
+  background-color: lightgrey;
 	cursor: pointer;
 }
 @media screen and (max-width: 992px) {
