--- a/index-style.css
+++ b/index-style.css
@@ -163,5 +163,33 @@
 	background-color:lightgrey;
     }
 }
-
+#social-icons{
+    height: 150px;
+    background: white;
+    text-align: center;
+    padding: 50px 0 50px 0;
+}
+#social-icons a{
+    display: inline-block;
+    padding: 5px 10px;
+    margin: 0 5px;
+    font-size: 40px;
+    border-radius: 5px;
+    transition: transform 2s ease, color 2s ease
+}
+#social-icons a:hover{
+    transform: translateY(-20px);
+}
+.facebook{
+    color: blue;
+}
+.twitter{
+    color: #38a1f3;
+}
+.instagaram{
+    color: #e13030;
+}
+.plus{
+    color: #db4839;
+}
 
