--- a/index-style.css
+++ b/index-style.css
@@ -1,4 +1,9 @@
 /*header files*/
+body{
+    font-family: 'Baloo Chettan 2', cursive;
+    line-height: 1.5;
+  
+}
 .header {
   color: black;
   background-color: white;
